BB-2682: Safari issues - fixed bug with buttom border in grid table - fixed bug with link z-index in order create page

--- a/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/less/current-grid/current-grid.less
+++ b/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/less/current-grid/current-grid.less
@@ -1346,6 +1346,10 @@
     .container-fluid {
       padding: 0;
     }
+
+    .table-bordered {
+      border-width: 0 0 1px 0;
+    }
   }
 
   .grid-container {
