--- a/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/less/shared/layout.less
+++ b/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/less/shared/layout.less
@@ -1208,6 +1208,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index:1;
   
   [class^="cf-"] {
     font-size: 1.8rem;
